@@ -359,7 +359,7 @@ NF_N_NAT_OUTSIDE_GLOBAL_IPV4 | 226
 NF_N_POST_NAPT_SRC_PORT | 	227
 NF_N_POST_NAPT_DST_PORT | 	228
 |
-__nprobe latency extensions__|
+__latency extensions for nfpcapd and nprobe__|
 NF9_NPROBE_CLIENT_NW_DELAY_SEC | 57554
 NF9_NPROBE_CLIENT_NW_DELAY_USEC | 57555
 NF9_NPROBE_SERVER_NW_DELAY_SEC | 57556
