@@ -1,4 +1,5 @@
 /*
+ *  Copyright (c) 2016, Peter Haag
  *  Copyright (c) 2014, Peter Haag
  *  Copyright (c) 2011, Peter Haag
  *  All rights reserved.
@@ -26,12 +27,6 @@
  *  CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) 
  *  ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE 
  *  POSSIBILITY OF SUCH DAMAGE.
- *  
- *  $Author$
- *
- *  $Id$
- *
- *  $LastChangedRevision$
  *  
  */
 
@@ -86,8 +81,15 @@ struct FlowNode {
 #define DATABLOCKSIZE 256
 	uint32_t	DataSize;	// max size of data buffer
 	void		*data;		// start of data buffer
-//	uint32_t	eodata;		// offset last byte in buffer
-	
+
+	struct FlowNode *rev_node;
+	struct latency_s {
+		uint64_t    client;
+		uint64_t    server;
+		uint64_t    application;
+		uint32_t	flag;
+		struct timeval t_request;
+	} latency;
 };
 
 typedef struct NodeList_s {
@@ -125,6 +127,8 @@ struct FlowNode *Insert_Node(struct FlowNode *node);
 
 void Remove_Node(struct FlowNode *node);
 
+int Link_RevNode(struct FlowNode *node);
+
 // Node list functions 
 NodeList_t *NewNodeList(void);
 
@@ -135,13 +139,6 @@ void Push_Node(NodeList_t *NodeList, struct FlowNode *node);
 struct FlowNode *Pop_Node(NodeList_t *NodeList, int *done);
 
 void DumpList(NodeList_t *NodeList);
-
-// Liked lists
-void AppendUDPNode(struct FlowNode *node);
-
-void TouchUDPNode(struct FlowNode *node);
-
-void UDPexpire(FlowSource_t *fs, time_t t_expire);
 
 // Stat functions
 void DumpNodeStat(void);
