@@ -193,9 +193,9 @@ NEL/NAT extensions
 .P
 
 .P
-nprobe extensions
+latency extension
 .P
-64 nprobe client/server/application latency"},
+64 nfpcapd/nprobe client/server/application latency"},
 
 .B IMPORTANT: 
 By default only extension 1 and 2 are selected
